Fix dark mode CSS issues

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,6 @@ body {
 @media (prefers-color-scheme: dark) {
   body {
     color: rgba(255, 255, 255, 0.7);
+    background-color: rgb(36, 36, 36);
   }
 }
